--- a/assets/scss/header/_header.scss
+++ b/assets/scss/header/_header.scss
@@ -51,7 +51,7 @@
       position: absolute;
       left: 50%;
       transform: translateX(-50%); // Центрируем логотип ровно по середине
-      max-width: 120px; // Уменьшаем логотип
+      max-width: 150px; // Уменьшаем логотип
     }
   }
 
@@ -62,7 +62,19 @@
     padding: 0;
 
     @include md {
-      display: none;
+      display: none; // По умолчанию скрываем
+      flex-direction: column;
+      position: absolute;
+      top: 100%;
+      left: 0;
+      width: 30%;
+      background-color: #e2e0e4c1;
+      padding: 10px;
+      z-index: 10;
+
+      &.open {
+        display: flex !important; // Показываем, если есть класс open
+      }
     }
   }
 
@@ -77,9 +89,9 @@
 
     &-icons a {
       display: flex;
-      // flex-direction: row; /* Выстраиваем иконки в одну линию */
       align-items: center; /* Выравниваем их по центру */
       justify-content: flex-end; // Выравнивание справа
+      padding: 10px;
 
       @include md {
         order: 2;
@@ -98,4 +110,30 @@
 
 .header:hover {
   background-color: rgba(255, 255, 255, 1); /* Белый фон при наведении */
+}
+
+.title-outline {
+  font-size: 48px; // Размер заголовка
+  font-weight: bold;
+  text-transform: uppercase; // Все буквы заглавные
+  color: transparent; // Прозрачный текст
+  -webkit-text-stroke: 2px white; // Белая обводка
+  letter-spacing: 2px; // Добавим расстояние между буквами
+
+  @include md {
+    text-align: center;
+  }
+}
+
+.subtitle-large {
+  font-size: 24px; // Увеличенный размер шрифта
+  font-weight: 500;
+
+  @include md {
+    text-align: center;
+  }
+}
+
+.icon {
+  padding: 5px;
 }
