--- a/assets/scss/style.scss
+++ b/assets/scss/style.scss
@@ -1,7 +1,7 @@
-@use 'container';
 @use './header/header';
 @use 'slides-carousel';
 @use 'common';
+@use 'footer';
 @use 'skin';
 @use 'variables';
 @use 'mixins-media';
